[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Paddle.png" type="Texture" id=1]
[ext_resource path="res://Opponent/Opponent.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 61 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 10 )

[node name="Opponent" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -847, -102 )
texture = ExtResource( 1 )
offset = Vector2( 847, 102 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Upper" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upper"]
position = Vector2( 0, -68 )
shape = SubResource( 2 )

[node name="Lower" type="Area2D" parent="."]
position = Vector2( 0, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lower"]
position = Vector2( 0, 52 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Upper" to="." method="_on_Upper_body_entered"]
[connection signal="body_exited" from="Upper" to="." method="_on_Upper_body_exited"]
[connection signal="body_entered" from="Lower" to="." method="_on_Lower_body_entered"]
[connection signal="body_exited" from="Lower" to="." method="_on_Lower_body_exited"]
